--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@
 primaryColor='#58afdd'
 backgroundColor="black"
 secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+textColor="white"
 font="sans serif"
