--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 
 [theme]
-primaryColor='white'
+primaryColor='black'
 backgroundColor="#3271a5"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#262730"
